<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2011 Federico Paolinelli
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
	<string name="options">Options</string>
    <string name="app_name">PegDroid</string>
    <string name="new_game">New</string>
    <string name="play_again">Play again</string>
    <string name="restore_game">Restore</string>
    <string name="back">Another board</string>
    <string name="ok">Ok</string>
    <string name="max_score_name">Best Balls Left:</string>
    <string name="do_you_want_to_restore">Do you want to restore previously saved game?</string>
    <string name="starting_new_game">Do you want to start new game?</string>
    <string name="stall">STALL</string>
    <string name="new_record">NEW RECORD</string>
    <string name="no_more_moves">No more moves available. \nRemaining balls %d. Do you want to start new game?</string>
    <string name="no_more_moves_record">Remaining balls: %1$d in %3$s\nOld Record: %2$d balls\nDo you want to start new game?</string>
	<string name="achievement">New Achievement!</string>
	<string name="check_leaderboard">Scores</string>
	<string name="share_to_social">Share</string>
	<string name="tell_a_friend">Tell a friend</string>
	<string name="you_are_now_master_of">You are now master of %s</string>
	<string name="no_more_moves_record_time">Remaining balls: %1$d \nOld record time: %2$s\nNew record time: %3$s\nDo you want to start new game?</string>
	<string name="update">New update:\nComplete a board faster to get a better score!\nChallenge people from all over the world on scoreloop</string>
	<string name="check_game">I found this nice game</string>
	<string name="try_pegdroid">Give peg solitaire for android a try: goo.gl/N6AsD</string>
    <string name="no_thanks">No, thanks</string>
    <string name="yes_please">Ok</string>
    <string name="please_vote">Help spread the word</string>
    <string name="if_you_enjoyed">If you like this app, please rate it in the Android Market. Thanks!</string>
    
</resources>
